...
        
        return label
    }()
    
    fileprivate let searchTextField: UITextField = {
        let textField = UITextField()
        textField.accessibilityIdentifier = "search textfield"
        textField.borderStyle = .roundedRect
        textField.clearButtonMode = .whileEditing
        textField.font = UIFont.systemFont(ofSize: 16, weight: .medium)
        textField.textColor = UIColor.textColor
        textField.placeholder = "Search "
        textField.returnKeyType = .search
        
        return textField
    }()
    
    fileprivate lazy var searchButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "search button"
        button.setTitle("Search pictures", for: .normal)
        button.layer.borderWidth = 1
        button.layer.cornerRadius = 5
        button.layer.borderColor = UIColor.textColor.cgColor
        button.setTitleColor(UIColor.textColor, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 18, weight: .bold)
...
